test/k8sT/manifests/cnp-l7-stresstest.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "Policy to stress test L7 proxy"
metadata:
  name: "l7-stresstest"
  namespace: "development"
spec:
  endpointSelector:
    matchLabels:
      id: server
  ingress:
  - fromEndpoints:
    - matchLabels:
        id: client
        "k8s:io.kubernetes.pod.namespace": qa
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/$"
